objects/ContractMessage__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ContractMessage</relationshipLabel>
        <relationshipName>ContractMessage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OraclePartyId__c</fullName>
        <label>OraclePartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPersonId__c</fullName>
        <label>SalesPersonId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ContractMessage</relationshipLabel>
        <relationshipName>ContractMessage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ContractMessage</label>
    <nameField>
        <label>ContractMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractMessage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>